detach java udf and udf-example from parent
Signed-off-by: Runji Wang <wangrunji0408@163.com>